<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <View
        android:id="@+id/tabViewLine_v"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#544526" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabViewLine_v"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/tabViewButton0_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/tabViewIcon0_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tab_view_icon_0" />

            <TextView
                android:id="@+id/tabViewTxt0_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabViewIcon0_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/bo_fang"
                android:textColor="@drawable/tab_view_text_color_0"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabViewButton1_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/tabViewIcon1_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tab_view_icon_1" />

            <TextView
                android:id="@+id/tabViewTxt1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabViewIcon1_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/qu_ku"
                android:textColor="@drawable/tab_view_text_color_0"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabViewButton2_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/tabViewIcon2_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tab_view_icon_2" />

            <TextView
                android:id="@+id/tabViewTxt2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabViewIcon2_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/smb"
                android:textColor="@drawable/tab_view_text_color_0"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabViewButton3_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/tabViewIcon3_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tab_view_icon_3" />

            <TextView
                android:id="@+id/tabViewTxt3_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabViewIcon3_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/she_zhi"
                android:textColor="@drawable/tab_view_text_color_0"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>